--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react": "18.3.1",
     "react-native": "0.75.2",
     "react-native-gesture-handler": "^2.19.0",
-    "react-native-reanimated": "^3.15.1"
+    "react-native-reanimated": "^3.15.1",
+    "react-native-safe-area-context": "^4.10.9",
+    "react-native-screens": "^3.34.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
